@@ -1,3 +1,14 @@
+Fri Oct 17 12:32:53 2003  Huang-Ming Huang  <hh1@cse.wustl.edu>
+
+        * CEC_DynamicImplementation.cpp
+        * CEC_TypedConsumerAdmin.cpp
+        * CEC_TypedProxyPushConsumer.cpp
+        * CEC_TypedSupplierAdmin.cpp
+          Fixed problems in emulated exception case.
+
+        * orbsvcs/orbsvcs/FtRtEvent/Utils/UUID.cpp:
+          Fixed problem in cygwin build.
+
 Fri Oct 17 12:37:43 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ServerScheduler_i.h:
